# wabisabi

./: .coveragerc  .gitattributes  .travis.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
deprecation_factory/: __init__.py  _version.py  default_parameter_change.py  deprecation_factory.py  docscrape.py  examples.py  kwonly_change.py  merge_docstrings.py
deprecation_factory/tests/: test_kwarg_deprecation.py  test_kwonly_deprecation.py
docs/: conf.py  deprecation_factory.rst  examples.rst  index.rst  installation.rst  modules.rst  usage.rst
examples/: default_value.py  kwarg_default_deprecation.py  kwarg_name.py  kwonly.py
tests/: test_deprecation_factory.py
wabisabi/: __init__.py  _version.py  default_parameter_change.py  kwarg_name_change.py  kwonly_change.py  update_keyword_only.py
wabisabi/tests/: test_kwarg_name_change_deprecation.py
