[metadata]
license_file = LICENSE


[bdist_wheel]
universal = 0

[flake8]
exclude = docs
include = wabisabi, examples
ignore  = F401


[tool:pytest]
collect_ignore = ['setup.py']


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = wabisabi/_version.py
versionfile_build = wabisabi/_version.py
tag_prefix =
parentdir_prefix = wabisabi-

